<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_padding"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- Add image for home screen logo. -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_logo_content_description"
            android:src="@drawable/ballot_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Add Button to navigate to upcoming elections. -->
        <Button
            android:id="@+id/upcomingElectionsButton"
            style="@style/DefaultButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_padding"
            android:contentDescription="@string/upcoming_elections_button_content_description"
            android:text="@string/upcoming_elections_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/representativesButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Add Button to navigate to representatives. -->
        <Button
            android:id="@+id/representativesButton"
            style="@style/DefaultButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/representatives_button_content_description"
            android:text="@string/representatives_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>