<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!--Web site icon-->
    <ImageView
        android:id="@+id/web_site_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/web_site_icon"
        android:src="@drawable/ic_www"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Facebook icon -->
    <ImageView
        android:id="@+id/facebook_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/default_padding"
        android:contentDescription="@string/facebook_icon"
        android:src="@drawable/ic_facebook"
        app:layout_constraintStart_toEndOf="@id/web_site_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Twitter icon -->
    <ImageView
        android:id="@+id/twitter_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/default_padding"
        android:contentDescription="@string/twitter_icon"
        android:src="@drawable/ic_twitter"
        app:layout_constraintStart_toEndOf="@id/facebook_icon"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>