<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Add data binding node for Voter Info ViewModel -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            viewVisibility="@{viewModel.isDataAvailable}"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.voterInfo.electionName}"
            app:titleTextColor="@color/white"
            tools:title="@string/app_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/errorLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            viewVisibility="@{viewModel.showError}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name">

            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_loading_data"
                android:textColor="@android:color/holo_red_light"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/errorBackButton"
                app:layout_constraintTop_toBottomOf="@id/errorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/go_back"
                android:drawableStart="@android:drawable/ic_menu_revert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            viewVisibility="@{viewModel.isLoading}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            viewVisibility="@{viewModel.isDataAvailable}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name">
            <!-- TODO: Add visual styling -->
            <TextView
                android:id="@+id/electionDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:text="@{viewModel.voterInfo.date}"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="12 November 2055" />

            <!-- TODO: Add visual styling and content -->
            <TextView
                android:id="@+id/state_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/electionDate"
                app:layout_constraintTop_toBottomOf="@id/electionDate" />

            <!-- TODO: Add click binding to open web URL -->
            <!-- TODO: Add visual styling and content -->
            <TextView
                android:id="@+id/state_locations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/electionDate"
                app:layout_constraintTop_toBottomOf="@id/state_header" />

            <!-- TODO: Add click binding to open web URL -->
            <!-- TODO: Add visual styling and content -->
            <TextView
                android:id="@+id/electionInformationHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/election_information"
                android:textColor="@color/gray50"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/electionDate"
                app:layout_constraintTop_toBottomOf="@id/state_locations" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/address_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="votingUrl,ballotUrl" />

            <!-- TODO: Add visual styling and content -->
            <TextView
                android:id="@+id/votingUrl"
                style="@style/election_information_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voting_locations"
                app:layout_constraintStart_toStartOf="@id/electionDate"
                app:layout_constraintTop_toBottomOf="@id/electionInformationHeader" />

            <!-- TODO: Add data binding -->
            <TextView
                android:id="@+id/ballotUrl"
                style="@style/election_information_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ballot_information"
                app:layout_constraintStart_toStartOf="@id/electionDate"
                app:layout_constraintTop_toBottomOf="@id/votingUrl" />

            <!-- Add button to save election to Room -->
            <Button
                android:id="@+id/followElectionButton"
                style="@style/DefaultButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginBottom="@dimen/common_padding"
                android:contentDescription="@string/follow_election"
                android:text="@string/follow_election"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>